Fixed spacing of main content of Index page

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.call-to-action {
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+}
+
+.welcome-txt {
+    padding-bottom: 4rem;
+}
